--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <li><a href="#experience">Experience</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
+                <li> <img id="modeToggle" class="icon color-icon" src="./assets/theme_light.png" alt="Color theme icon" src-light="./assets/theme_light.png" src-dark="./assets/theme_dark.png"></li>
                 
             </ul>
         </div>
@@ -30,10 +31,10 @@
             </div>  
             <div class="menu-links">
                 <li><a href="#about"  onclick="toggleMenu()">About</a></li>
-                <li><a href="#experience"  onclick="toggleMenu()">Experience</a></li>
-                
+                <li><a href="#experience"  onclick="toggleMenu()">Experience</a></li>                
                 <li><a href="#projects"  onclick="toggleMenu()">Projects</a></li>
                 <li><a href="#contact"  onclick="toggleMenu()">Contact</a></li>
+                <li> <img id="modeToggle" class="icon color-icon" src="./assets/theme_light.png" alt="Color theme icon" src-light="./assets/theme_light.png" src-dark="./assets/theme_dark.png"></li>
             </div> 
         </div>
     </nav>
@@ -50,7 +51,7 @@
                 <button class="btn btn-color-1" onclick="location.href='./#contact'">Contact Information</button>
             </div>
             <div id="socials-container">
-                <img src="./assets/linkedin.png" alt="My linkedin profile" class="icon" onclick="location.href='https://www.linkedin.com/in/john-mark-agsangre-09603721b/'">
+                <img src="./assets/linkedin_light.png" scr-light="./assets/linkedin_light" scr-dark="./assets/linkedin_dark" alt="My linkedin profile" class="icon linkedin-icon" onclick="location.href='https://www.linkedin.com/in/john-mark-agsangre-09603721b/'">
                 <img src="./assets/github.png" alt="My github profile" class="icon" onclick="location.href='https://github.com/agsuuu'">
             </div>
 
@@ -296,11 +297,7 @@
             <p><a href="mailto:johnmarkagsangre@gmail.com">johnmarkagsangre@gmail.com</a></p>
           </div>
           <div class="contact-info-container">
-            <img
-              src="./assets/linkedin.png"
-              alt="LinkedIn icon"
-              class="icon contact-icon"
-            />
+            <img src="./assets/linkedin_light.png" scr-light="./assets/linkedin_light" scr-dark="./assets/linkedin_dark" alt="My linkedin profile" class="icon linkedin-icon" onclick="location.href='https://www.linkedin.com/in/john-mark-agsangre-09603721b/'">
             <p><a href="https://www.linkedin.com/in/john-mark-agsangre-09603721b/">LinkedIn</a></p>
           </div>
         </div>
