--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </div>
             <div id="socials-container">
                 <img src="./assets/linkedin_light.png" scr-light="./assets/linkedin_light" scr-dark="./assets/linkedin_dark" alt="My linkedin profile" class="icon linkedin-icon" onclick="location.href='https://www.linkedin.com/in/john-mark-agsangre-09603721b/'">
-                <img src="./assets/github.png" alt="My github profile" class="icon" onclick="location.href='https://github.com/agsuuu'">
+                <img src="./assets/github_light.png" scr-light="./assets/github_light" scr-dark="./assets/github_dark" alt="My github profile" class="icon github-icon" onclick="location.href='https://github.com'">
             </div>
 
         </div>
@@ -72,7 +72,9 @@
             <div class="about-containers">
               <div class="details-container">
                 <img
-                  src="./assets/experience.png"
+                  src="./assets/experience_light.png"
+                  src-light="./assets/experience_light.png"
+                  src-dark="./assets/experience_dark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -81,7 +83,9 @@
               </div>
               <div class="details-container">
                 <img
-                  src="./assets/education.png"
+                  src="./assets/education_light.png"
+                  src-light="./assets/education_light.png"
+                  src-dark="./assets/education_dark.png"
                   alt="Education icon"
                   class="icon"
                 />
@@ -102,7 +106,9 @@
           </div>
         </div>
         <img
-          src="./assets/arrow.png"
+          src="./assets/arrow_light.png"
+          src-light="./assets/arrow_light.png"
+          src-dark="./assets/arrow_dark.png"
           alt="Arrow icon"
           class="icon arrow"
           onclick="location.href='./#experience'"
@@ -118,7 +124,9 @@
               <div class="article-container">
                 <article>
                   <img
-                    src="./assets/checkmark.png"
+                    src="./assets/checkmark_light.png"
+                    src-light="./assets/checkmark_light.png"
+                    src-dark="./assets/checkmark_dark.png"
                     alt="Experience icon"
                     class="icon"
                   />
@@ -129,7 +137,9 @@
                 </article>
                 <article>
                   <img
-                    src="./assets/checkmark.png"
+                    src="./assets/checkmark_light.png"
+                    src-light="./assets/checkmark_light.png"
+                    src-dark="./assets/checkmark_dark.png"
                     alt="Experience icon"
                     class="icon"
                   />
@@ -140,7 +150,9 @@
                 </article>
                 <article>
                   <img
-                    src="./assets/checkmark.png"
+                    src="./assets/checkmark_light.png"
+                    src-light="./assets/checkmark_light.png"
+                    src-dark="./assets/checkmark_dark.png"
                     alt="Experience icon"
                     class="icon"
                   />
@@ -156,7 +168,9 @@
               <div class="article-container">
                 <article>
                   <img
-                    src="./assets/checkmark.png"
+                    src="./assets/checkmark_light.png"
+                    src-light="./assets/checkmark_light.png"
+                    src-dark="./assets/checkmark_dark.png"
                     alt="Experience icon"
                     class="icon"
                   />
@@ -167,7 +181,9 @@
                 </article>
                 <article>
                   <img
-                    src="./assets/checkmark.png"
+                    src="./assets/checkmark_light.png"
+                    src-light="./assets/checkmark_light.png"
+                    src-dark="./assets/checkmark_dark.png"
                     alt="Experience icon"
                     class="icon"
                   />
@@ -178,7 +194,9 @@
                 </article>
                 <article>
                   <img
-                    src="./assets/checkmark.png"
+                    src="./assets/checkmark_light.png"
+                    src-light="./assets/checkmark_light.png"
+                    src-dark="./assets/checkmark_dark.png"
                     alt="Experience icon"
                     class="icon"
                   />
@@ -192,7 +210,9 @@
           </div>
         </div>
         <img
-          src="./assets/arrow.png"
+          src="./assets/arrow_light.png"
+          src-light="./assets/arrow_light.png"
+          src-dark="./assets/arrow_dark.png"
           alt="Arrow icon"
           class="icon arrow"
           onclick="location.href='./#projects'"
@@ -278,7 +298,9 @@
           </div>
         </div>
         <img
-          src="./assets/arrow.png"
+          src="./assets/arrow_light.png"
+          src-light="./assets/arrow_light.png"
+          src-dark="./assets/arrow_dark.png"
           alt="Arrow icon"
           class="icon arrow"
           onclick="location.href='./#contact'"
@@ -290,14 +312,16 @@
         <div class="contact-info-upper-container">
           <div class="contact-info-container">
             <img
-              src="./assets/email.png"
+              src="./assets/email_light.png"
+              scr-light="./assets/email_light.png"
+              scr-dark="./assets/email_dark.png"
               alt="Email icon"
               class="icon contact-icon email-icon"
             />
             <p><a href="mailto:johnmarkagsangre@gmail.com">johnmarkagsangre@gmail.com</a></p>
           </div>
           <div class="contact-info-container">
-            <img src="./assets/linkedin_light.png" scr-light="./assets/linkedin_light" scr-dark="./assets/linkedin_dark" alt="My linkedin profile" class="icon linkedin-icon" onclick="location.href='https://www.linkedin.com/in/john-mark-agsangre-09603721b/'">
+            <img src="./assets/linkedin_light.png" scr-light="./assets/linkedin" scr-dark="./assets/linkedin_dark" alt="My linkedin profile" class="icon linkedin-icon" onclick="location.href='https://www.linkedin.com'">
             <p><a href="https://www.linkedin.com/in/john-mark-agsangre-09603721b/">LinkedIn</a></p>
           </div>
         </div>
