--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
                 <li><a href="#experience"  onclick="toggleMenu()">Experience</a></li>                
                 <li><a href="#projects"  onclick="toggleMenu()">Projects</a></li>
                 <li><a href="#contact"  onclick="toggleMenu()">Contact</a></li>
-                <li> <img id="modeToggle" class="icon color-icon" src="./assets/theme_light.png" alt="Color theme icon" src-light="./assets/theme_light.png" src-dark="./assets/theme_dark.png"></li>
+                <li> <img id="modeToggle2" class="icon color-icon" src="./assets/theme_light.png" alt="Color theme icon" src-light="./assets/theme_light.png" src-dark="./assets/theme_dark.png"></li>
             </div> 
         </div>
     </nav>
     <section id="profile">
         <div class="section__pic-container">
-            <img src="./assets/dp 1.png" alt="John Mark profile picture">
+            <img src="./assets/final abt me.png" alt="John Mark profile picture">
         </div>
         <div class="section__text">
             <p class="section__text__p1">Hello, I'm</p>
@@ -51,8 +51,22 @@
                 <button class="btn btn-color-1" onclick="location.href='./#contact'">Contact Information</button>
             </div>
             <div id="socials-container">
-                <img src="./assets/linkedin_light.png" scr-light="./assets/linkedin_light" scr-dark="./assets/linkedin_dark" alt="My linkedin profile" class="icon linkedin-icon" onclick="location.href='https://www.linkedin.com/in/john-mark-agsangre-09603721b/'">
-                <img src="./assets/github_light.png" scr-light="./assets/github_light" scr-dark="./assets/github_dark" alt="My github profile" class="icon github-icon" onclick="location.href='https://github.com'">
+              <img
+              src="./assets/linkedin_light.png"
+              src-light="./assets/linkedin_light.png"
+              src-dark="./assets/linkedin_dark.png"
+              alt="My LinkedIn profile"
+              class="icon linkedin-icon"
+              onclick="location.href='https://linkedin.com/'"
+            />
+            <img
+              src="./assets/github_light.png"
+              src-light="./assets/github_light.png"
+              src-dark="./assets/github_dark.png"
+              alt="My github profile"
+              class="icon github-icon"
+              onclick="location.href='https://github.com/'"
+            />
             </div>
 
         </div>
@@ -313,15 +327,22 @@
           <div class="contact-info-container">
             <img
               src="./assets/email_light.png"
-              scr-light="./assets/email_light.png"
-              scr-dark="./assets/email_dark.png"
+              src-light="./assets/email_light.png"
+              src-dark="./assets/email_dark.png"
               alt="Email icon"
               class="icon contact-icon email-icon"
             />
             <p><a href="mailto:johnmarkagsangre@gmail.com">johnmarkagsangre@gmail.com</a></p>
           </div>
           <div class="contact-info-container">
-            <img src="./assets/linkedin_light.png" scr-light="./assets/linkedin" scr-dark="./assets/linkedin_dark" alt="My linkedin profile" class="icon linkedin-icon" onclick="location.href='https://www.linkedin.com'">
+            <img
+            src="./assets/linkedin_light.png"
+            src-light="./assets/linkedin_light.png"
+            src-dark="./assets/linkedin_dark.png"
+            alt="My LinkedIn profile"
+            class="icon linkedin-icon"
+            onclick="location.href='https://linkedin.com/'"
+          />
             <p><a href="https://www.linkedin.com/in/john-mark-agsangre-09603721b/">LinkedIn</a></p>
           </div>
         </div>
